tests/snapshots/readback_lnet__addition.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/addition.hvm
---
(+ 2 1)
