tests/snapshots/readback_lnet__bad_net.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/bad_net.hvm
---
Readback Warning:
Reached Root
<Invalid>
