tests/snapshots/readback_lnet__bad_net1.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/bad_net1.hvm
---
λa λb a
