tests/snapshots/readback_lnet__bad_net3.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/bad_net3.bend
---
λa λb a
