tests/snapshots/readback_lnet__complicated_dup.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/complicated_dup.hvm
---
λa (λb (a (b c)) λc (a (b c)))
