tests/snapshots/readback_lnet__fst_snd.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/fst_snd.bend
---
(λa a (λb b {{1 3} 2}))
